--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,8 +1,9 @@
 {
     "files.associations": {
-        "*.keepme": "c",
-        "libft.h": "c",
-        "histedit.h": "c",
-        "readline.h": "c"
-    }
+		"*.keepme": "c",
+		"libft.h": "c",
+		"histedit.h": "c",
+		"readline.h": "c",
+		"minishell.h": "c"
+	}
 }
